# Crossplatform_Screen_Capture

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CPSC_BP.h
src/: main.cpp
